--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -277,7 +277,7 @@
                   <ul class="fa-ul">
                     <li>
                       <span class="fa-li"><span class="fas fa-envelope"></span></span>
-                      <a href="mailto:enquiries@goodmoves.org.uk">enquiries@goodmoves.org.uk</a>
+                      <a href="mailto:enquiries@getinvolved.org.uk">enquiries@getinvolved.org.uk</a>
                     </li>
                     <li>
                       <span class="fa-li"><span class="fas fa-phone"></span></span>
@@ -285,7 +285,7 @@
                     </li>
                     <li>
                       <span class="fa-li"><span class="fab fa-twitter"></span></span>
-                      <a href="https://twitter.com/goodmovesjobs" target="_blank">Twitter</a>
+                      <a href="https://twitter.com/getinvolvedjobs" target="_blank">Twitter</a>
                     </li>
                   </ul>
                 </div>
@@ -367,7 +367,7 @@
   {{#compare request.url.hostname "getinvolved.local"}}
     <script type="text/javascript" src="/assets/getinvolved/main.js"></script>
   {{else}}
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/scvo-frontend/getinvolved/main.js"></script>
+    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/getinvolved/main-{{@root.context.metaData.assetsVersion}}.js"></script>
   {{/compare}}
   <script>
     var getinvolved = null; readyListeners = [];
