Created radio-button partial and ajax radio-button component

--- a/sites/configurations/goodmoves/partials/components/checkbox.hbs
+++ b/sites/configurations/goodmoves/partials/components/checkbox.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-form-field">
+<div class="mdc-form-field {{fieldClasses}}">
   <div class="mdc-checkbox">
     <input type="checkbox" class="mdc-checkbox__native-control" id="{{id}}" name="{{name}}" value="{{default value label}}" {{#if checked}}checked{{/if}} />
     <div class="mdc-checkbox__background">
