--- a/sites/configurations/getinvolved/partials/browse.hbs
+++ b/sites/configurations/getinvolved/partials/browse.hbs
@@ -13,7 +13,7 @@
                   {{{key}}}
                 {{/with ~}}
               </span>
-              <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
+              <span class="mdc-list-item__meta" aria-label="{{doc_count}} opportunities">
                 {{doc_count}}
               </span>
             </a>
@@ -34,7 +34,7 @@
                   {{{key}}}
                 {{/with ~}}
               </span>
-              <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
+              <span class="mdc-list-item__meta" aria-label="{{doc_count}} opportunities">
                 {{doc_count}}
               </span>
             </a>
