--- a/sites/configurations/getinvolved/templates/account/sign-in.hbs
+++ b/sites/configurations/getinvolved/templates/account/sign-in.hbs
@@ -10,8 +10,8 @@
 {{else}}
 <form id="sign-in-form" method="POST" class="sign-in-form">
   <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--vacancy">
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
+    <div class="mdc-card__info--opportunity">
+      <div class="mdc-card__info--opportunity-title mdc-typography--headline4 x-padding">
         {{#if @root.request.params.query.reauth}}
           Reauthenticate
         {{else}}
@@ -19,7 +19,7 @@
         {{/if}}
       </div>
       {{#if @root.request.params.query.reauth}}
-        <div class="mdc-card__info--vacancy-title mdc-typography--headline5 x-padding">
+        <div class="mdc-card__info--opportunity-title mdc-typography--headline5 x-padding">
           Before you can do that you must sign in again
         </div>
       {{/if}}
