--- a/sites/configurations/getinvolved/templates/account/sign-up.hbs
+++ b/sites/configurations/getinvolved/templates/account/sign-up.hbs
@@ -10,8 +10,8 @@
 {{else}}
 <form id="sign-up-form" method="POST" class="sign-in-form sign-up-form">
   <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--vacancy">
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
+    <div class="mdc-card__info--opportunity">
+      <div class="mdc-card__info--opportunity-title mdc-typography--headline4 x-padding">
         Sign up
       </div>
     </div>
