--- a/sites/configurations/getinvolved/partials/opportunity/actions.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/actions.hbs
@@ -1,7 +1,7 @@
 <div class="mdc-card__actions">
   <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
     {{#compare action "===" "organisation" ~}}
-    <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more about {{organisation.name}}</a>
+    <a href="/organisation/{{organisation_slug}}{{@root.request.url.search}}" class="mdc-card__action hide-sm">Find out more about {{organisation_name}}</a>
     <!-- <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a> -->
     {{else}}
     {{#compare @root.route.name "===" "opportunity_search" ~}}
