--- a/sites/configurations/getinvolved/partials/opportunity/list.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/list.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card milo-volunteering-opportunity list{{if top_job " top-job"}}" data-opportunity-id="{{Id}}">
+<div class="mdc-card milo-volunteering-opportunity list" data-opportunity-id="{{Id}}">
   {{> opportunity_key_info}}
   <hr class="mdc-list-divider" />
   {{> opportunity_description limit="10.5rem" description=description}}
