Reverted fb config

--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -373,12 +373,12 @@
     var getinvolved = null; readyListeners = [];
     $(document).ready(function() {
       getinvolved = new GetInvolved.GetInvolved({
-        apiKey: "AIzaSyDQP_d6BA2uX4XHlce3GA4XdV_z6GYNGDU",
-        authDomain: "scvo-get-involved.firebaseapp.com",
-        databaseURL: "https://scvo-get-involved.firebaseio.com",
-        projectId: "scvo-get-involved",
-        storageBucket: "scvo-get-involved.appspot.com",
-        messagingSenderId: "678915037786"
+        apiKey: "AIzaSyDCHiGp3FllVnjPcn0_LjcZrUe_5nC7LAc",
+        authDomain: "scvo-getinvolved.firebaseapp.com",
+        databaseURL: "https://scvo-getinvolved.firebaseio.com",
+        projectId: "scvo-getinvolved",
+        storageBucket: "scvo-getinvolved.appspot.com",
+        messagingSenderId: "815398681377"
       });
       ready = true;
       readyListeners.forEach(function(listener) {
