--- a/sites/configurations/getinvolved/partials/components/tab-bar.hbs
+++ b/sites/configurations/getinvolved/partials/components/tab-bar.hbs
@@ -1,7 +1,7 @@
 <div class="mdc-tab-bar {{extraClasses}}" {{#if id}}id="{{id}}"{{/if}} role="tablist" data-tab-bar='{
       "defaultTabIdentifier": {{{stringify (default defaultTabIdentifier null)}}}
     }'>
-  <div class="mdc-tab-scroller h-padding">
+  <div class="mdc-tab-scroller">
     <div class="mdc-tab-scroller__scroll-area">
       <div class="mdc-tab-scroller__scroll-content">
         {{> @partial-block}}
