--- a/sites/configurations/scotlandforeurope/layouts/default.hbs
+++ b/sites/configurations/scotlandforeurope/layouts/default.hbs
@@ -24,8 +24,7 @@
   <meta name="theme-color" content="#0070bb">
   <!-- <link type="text/css" rel="stylesheet" href="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.css"> -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
-  <link type="text/css" rel="stylesheet" href="/assets/css/scotlandforeurope-styles.css">
-  <!-- <link type="text/css" rel="stylesheet" href="  https://storage.googleapis.com/scvo-assets/temporary/scotlandforeurope-styles.css"> -->
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-31"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
@@ -42,6 +41,11 @@
   console.log('Menus:', {{{regexReplace (regexReplace (stringify context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
   {{/ifAny ~}}
   </script>
+  {{#compare @root.request.url.hostname "scotlandforeurope.local" ~}}
+    <link type="text/css" rel="stylesheet" href="/assets/scotlandforeurope/main.css">
+  {{else}}
+    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/scotlandforeurope/main-{{@root.context.metaData.assetsVersion}}.css">
+  {{/compare ~}}
 </head>
 <body class="{{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
   <charter-site>
