--- a/sites/configurations/fundingscotland/layouts/default.hbs
+++ b/sites/configurations/fundingscotland/layouts/default.hbs
@@ -362,6 +362,13 @@ console.log('Menus:', {{{regexReplace (regexReplace (stringify @root.context.met
   </script>
   <script type="text/javascript" id="cookieinfo" src="/assets/js/cookieinfo.min.js" data-message="We use cookies to track anonymous usage statistics and do not collect any personal information that can be used to identify you. By continuing to visit this site you agree to our use of cookies." data-font-family="'Open Sans',Helvetica,Arial,sans-serif" data-bg="#fff" data-link="#178737" data-divlink="#fff" data-divlinkbg="#178737" data-position="bottom" data-accept-on-scroll="true" data-moreinfo="/cookies" data-cookie="CookieInfoScript" data-text-align="left"></script>
   <script type="text/javascript" src="/assets/js/fundingscotland/main.js"></script>
+
+  {{#compare request.url.hostname "fundingscotland.local" ~}}
+    <script type="text/javascript" src="/assets/fundingscotland/main.js"></script>
+  {{else}}
+    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/fundingscotland/main-{{@root.context.metaData.assetsVersion}}.js"></script>
+  {{/compare ~}}
+
   {{{layoutParts.foot}}}
 </body>
 </html>
