--- a/sites/configurations/scotlandforeurope/layouts/default.hbs
+++ b/sites/configurations/scotlandforeurope/layouts/default.hbs
@@ -81,16 +81,12 @@
         </div>
       </header>
 
-      <aside class="mdc-drawer mdc-drawer--temporary" id="mobile-menu" data-mdc-auto-init="MDCTemporaryDrawer">
-        <nav class="mdc-drawer__drawer">
-          <header class="mdc-drawer__header">
-            <div class="mdc-temporary-drawer__header-content mdc-theme--text-primary-on-primary">
-              <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/assets/images/logos/sfe-mobile.png" class="brand-logo-mobile" />
-            </div>
-          </header>
-          <nav class="mdc-drawer__content mdc-list">
+      <aside class="mdc-drawer mdc-drawer--modal" id="mobile-menu" data-mdc-auto-init="MDCDrawer">
+        <div class="mdc-drawer__content">
+          <nav class="mdc-list">
             {{#each @root.context.metaData.menus.main ~}}
-            <a class="mdc-list-item{{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
+            <a class="mdc-list-item {{#if (regexMatch @root.request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}"
+               href="{{stripTrailingSlash path}}" {{#if (regexMatch @root.request.url.pathname route "gi")}}aria-selected="true"{{else}}aria-hidden="true"{{/if}}>
               {{#if icon ~}}
               <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
               {{/if ~}}
@@ -98,8 +94,10 @@
             </a>
             {{/each ~}}
           </nav>
-        </nav>
+        </div>
       </aside>
+
+      <div class="mdc-drawer-scrim"></div>
 
       <main>
         <div class="container-fluid">
@@ -161,9 +159,9 @@
     </div>
   </charter-site>
   {{#if (contains request.url.host '.local')}}
-  <script type="text/javascript" src="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/material-components-web@0.39.1/dist/material-components-web.js"></script>
   {{else}}
-  <script type="text/javascript" src="https://unpkg.com/material-components-web@0.37.1/dist/material-components-web.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/material-components-web@0.39.1/dist/material-components-web.min.js"></script>
   {{/if}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript">
