--- a/sites/configurations/scvo/layouts/default.hbs
+++ b/sites/configurations/scvo/layouts/default.hbs
@@ -120,23 +120,20 @@
               </nav>
             </section>
             {{#if data.auth ~}}
-            <section class="toolbar-user">
-              <div class="mdc-menu-anchor">
-                <button class="mdc-button" data-menu-target="#user-menu">
-                  <span class="far fa-fw fa-user-circle"></span>
-                  {{{data.auth.email}}}
-                  <span class="far fa-fw fa-angle-down"></span>
-                </button>
-                <div class="mdc-menu" tabindex="-1" data-mdc-auto-init="MDCMenu" id="user-menu">
-                  <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
-                    <a class="mdc-list-item " href="/jobs/community-jobs-scotland/vacancies/sign-out" role="menuitem">
-                      <span class="far fa-sign-out-alt mdc-list-item__graphic" aria-hidden="true"></span>
-                      Sign out
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </section>
+            {{#>components_anchored_menu
+                buttonClasses="mdc-theme--on-primary"
+                imageUrl=(default @root.data.auth.photoURL false)
+                imageClasses="far fa-fw user-avatar"
+                iconClasses=(if (if @root.data.auth.photoURL false else=true) "far fa-fw fa-user-circle" else=false)
+                buttonLabel=@root.data.auth.email
+                arrowClasses="far fa-fw fa-angle-down"}}
+              {{#each @root.context.metaData.menus.user-signed-in ~}}
+                <a class="mdc-list-item " href="/jobs/community-jobs-scotland/vacancies/sign-out" role="menuitem">
+                  <span class="far fa-sign-out-alt mdc-list-item__graphic" aria-hidden="true"></span>
+                  Sign out
+                </a>
+              {{/each ~}}
+            {{/components_anchored_menu}}
             {{/if ~}}
           </div>
         </div>
