--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -18,16 +18,11 @@
 <form action="/jobs/community-jobs-scotland/vacancies/{{@root.request.params.phase}}" method="GET" [searchroute]="'cjs_job_search'" data-auto-search="false">
   <input type="hidden" name="view" value="{{@root.request.params.query.view}}" />
 
-  <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth search-tab-bar" data-mdc-auto-init="MDCTabBar">
-    <a href="/jobs/community-jobs-scotland/vacancies/{{@root.request.params.phase}}?q={{@root.request.params.query.q}}&sector={{@root.request.params.query.sector}}&region={{@root.request.params.query.region}}&location={{@root.request.params.query.location}}&distance={{@root.request.params.query.distance}}&lat={{@root.request.params.query.lat}}&lng={{@root.request.params.query.lng}}&job_number={{@root.request.params.query.job_number}}" class="mdc-tab{{#compare @root.request.params.query.view "!==" "map"}} mdc-tab--active{{/compare}} details-tab" id="detailed-results">
-      <span class="far fa-list fa-fw" title="List"></span>
-      List
-    </a>
-    <a href="/jobs/community-jobs-scotland/vacancies/{{@root.request.params.phase}}?q={{@root.request.params.query.q}}&sector={{@root.request.params.query.sector}}&region={{@root.request.params.query.region}}&location={{@root.request.params.query.location}}&distance={{@root.request.params.query.distance}}&lat={{@root.request.params.query.lat}}&lng={{@root.request.params.query.lng}}&job_number={{@root.request.params.query.job_number}}&view=map" class="mdc-tab{{#compare @root.request.params.query.view "===" "map"}} mdc-tab--active{{/compare}} map-tab">
-      <span class="far fa-map-marker-alt fa-fw" title="Map"></span>
-      Map
-    </a>
-    <span class="mdc-tab-bar__indicator"></span>
+  <div class="h-padding">
+    {{#>components_tab_bar}}
+      {{>components_tab url=(concat "/jobs/community-jobs-scotland/vacancies/" @root.request.params.phase "?" (querystringify @root.request.params.query view="list")) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.params.query.view "===" "list")}}
+      {{>components_tab url=(concat "/jobs/community-jobs-scotland/vacancies/" @root.request.params.phase "?" (querystringify @root.request.params.query view="map")) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.params.query.view "===" "map")}}
+    {{/components_tab_bar}}
   </div>
 
   <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
