Fixed filters button

--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -195,7 +195,7 @@
               <span class="far fa-search-plus mdc-list-item__graphic" aria-hidden="true"></span>
               Save/email this search
             </button>
-            <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg" id="filter-search-button" data-drawer-target="#sidebar-temporary">
+            <button class="mdc-button mdc-button--raised mdc-button--large filter-search hide-lg" id="filter-search-button" onclick="document.getElementById('sidebar-button').click();">
               <span class="far fa-search mdc-list-item__graphic" aria-hidden="true"></span>
               Search filters
             </button>
