--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -37,13 +37,17 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
-          <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth search-location" value="{{#ifAll @root.request.params.query.lat @root.request.params.query.lng}}{{@root.request.params.query.location}}{{/ifAll}}" placeholder="" data-lpignore="true" data-location-options='
-            {
-              "types": ["(regions)"],
-              "componentRestrictions": {
-                "country": "gb"
-              }
-            }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
+          <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth search-location" value="{{#ifAll @root.request.params.query.lat @root.request.params.query.lng}}{{@root.request.params.query.location}}{{/ifAll}}" placeholder="" data-lpignore="true" data-location-search='{
+                  "googleMapsOptions": {
+                    "type": ["(regions)"],
+                    "componentRestrictions": {
+                      "country": "gb"
+                    }
+                  },
+                  "latSelector": "[name=\"lat\"]",
+                  "lngSelector": "[name=\"lng\"]",
+                  "locationServicesSelector": ".geo-lookup"
+                }'>
           <label class="mdc-floating-label" for="location">
             Location
           </label>
