--- a/sites/configurations/getinvolved/templates/opportunities/map.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/map.hbs
@@ -12,7 +12,7 @@
 {{#each @root.data.search_data.map_results.hits.hits ~}}
   {{#if _source.geo_coords ~}}
     {{#each (arrayify _source.geo_coords) ~}}
-      <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-shortlisted="{{#each @root.data.shortlist.items}}{{#compare id "===" ../../_source.Id}}true{{/compare}}{{/each}}" data-homebased="{{#if ../_source.home_based}}true{{/if}}" data-title="{{../_source.title}}">
+      <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-shortlisted="{{#each @root.data.shortlist.items}}{{#compare id "===" ../../_source.Id}}true{{/compare}}{{/each}}" data-title="{{../_source.title}}">
         {{>opportunity_map ../_source}}
       </marker>
     {{/each ~}}
