--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -35,7 +35,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-7-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField" style="    margin-top: 16px;">
           <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
           <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth search-location" value="{{#ifAll @root.request.params.query.lat @root.request.params.query.lng}}{{@root.request.params.query.location}}{{/ifAll}}" placeholder="" data-lpignore="true" data-location-search='{
                   "googleMapsOptions": {
