--- a/sites/configurations/getinvolved/partials/opportunity-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity-search-form.hbs
@@ -20,10 +20,12 @@
 
 <div class="mdc-drawer__content">
   <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional">Search opportunities</h2>
-  {{#>components_tab_bar}}
-    {{>components_tab url=(concat "/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/search")}}
-    {{>components_tab url=(concat "/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/map")}}
-  {{/components_tab_bar}}
+  <div class="h-padding">
+    {{#>components_tab_bar}}
+      {{>components_tab url=(concat "/search" @root.request.url.search) iconClasses="far fa-list fa-fw" label="List" active=(compare @root.request.url.pathname "===" "/search")}}
+      {{>components_tab url=(concat "/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/map")}}
+    {{/components_tab_bar}}
+  </div>
 
   <form action="/{{#compare @root.request.url.pathname "/map"}}map{{else}}search{{/compare}}" method="GET" class="search-form" novalidate>
     <input type="hidden" name="sort" value="{{@root.request.params.query.sort}}" id="{{instance_id}}-sort">
