--- a/sites/configurations/getinvolved/partials/opportunity/map.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/map.hbs
@@ -2,9 +2,9 @@
   <h3 class="mdc-typography--headline7">
     <a href="/opportunity/{{slug}}{{@root.request.url.search}}">{{title}}</a>
   </h3>
-  {{#if organisation.name ~}}
+  {{#if organisation_name ~}}
   <div class="mdc-typography--body1 v-margin">
-    <strong>{{organisation.name}}</strong>
+    <strong>{{organisation_name}}</strong>
   </div>
   {{/if ~}}
   <div class="mdc-typography--body2 post-info">
