Map circle colours

--- a/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
+++ b/sites/configurations/scvo/templates/jobs/cjs-vacancy-search.hbs
@@ -38,7 +38,8 @@
                   "circle": {
                     "lat": {{@root.request.params.query.lat}},
                     "lng": {{@root.request.params.query.lng}},
-                    "radius": {{default @root.request.params.query.distance 0}}
+                    "radius": {{default @root.request.params.query.distance 0}},
+                    "color": "#0081BB"
                   }
                   {{/ifAll ~}}
                   }'>
