--- a/sites/configurations/goodmoves/templates/vacancies/map.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/map.hbs
@@ -1,13 +1,14 @@
 <div id="detailed-results-container" class="container-content container-map">
   <div id="map-full" data-map-name="fullMap" data-map-options='{
-      {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
+    {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
       "circle": {
         "lat": {{@root.request.params.query.lat}},
         "lng": {{@root.request.params.query.lng}},
-        "radius": {{default @root.request.params.query.distance 0}}
+        "radius": {{default @root.request.params.query.distance 0}},
+        "color": "#9cd986"
       }
-      {{/ifAll ~}}
-      }'>
+    {{/ifAll ~}}
+    }'>
     {{#each @root.data.search_data.map_results.hits.hits ~}}
       {{#if _source.geo_vacancy_coords ~}}
         {{#each (arrayify _source.geo_vacancy_coords) ~}}
