Set up OAuth 2.0

--- a/sites/configurations/getinvolved/layouts/default.hbs
+++ b/sites/configurations/getinvolved/layouts/default.hbs
@@ -376,7 +376,7 @@
     $(document).ready(function() {
       getinvolved = new GetInvolved.GetInvolved({
         apiKey: "AIzaSyDCHiGp3FllVnjPcn0_LjcZrUe_5nC7LAc",
-        authDomain: "scvo-getinvolved.firebaseapp.com",
+        authDomain: "auth.getinvolved.scot",
         databaseURL: "https://scvo-getinvolved.firebaseio.com",
         projectId: "scvo-getinvolved",
         storageBucket: "scvo-getinvolved.appspot.com",
