--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -416,7 +416,7 @@
     $(document).ready(function() {
       goodmoves = new Goodmoves.Goodmoves({
         apiKey: "AIzaSyAuGAacoIdUgbtfI42UXTHDosMS4pP5Teg",
-        authDomain: "goodmoves-frontend.firebaseapp.com",
+        authDomain: "auth.goodmoves.com",
         databaseURL: "https://goodmoves-frontend.firebaseio.com",
         projectId: "goodmoves-frontend",
         storageBucket: "goodmoves-frontend.appspot.com",
